-chore: show N/A if mode is not provided -style: fix software title text wrap

--- a/src/encoded/static/scss/encoded/modules/_item-pages.scss
+++ b/src/encoded/static/scss/encoded/modules/_item-pages.scss
@@ -1760,7 +1760,7 @@ File Overview Styles
 									.datum-value {
 										display: flex;
 										flex-wrap: wrap;
-										gap: 10px;
+										gap: 12px;
 										
 										.software-group {
 											display: flex;
@@ -1775,6 +1775,7 @@ File Overview Styles
 											.title {
 												padding: 4px 12px;
 												font-weight: 400;
+												width: max-content;
 											}
 											.version {
 												height: 100%;
